--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,8 @@ h2 {
     border-top: 1px solid #888;
     border-bottom: 1px solid #888;
     padding: 0.75rem 0;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
+    background-color: #FCFCFE;
 }
 
 h3 {
@@ -39,11 +40,11 @@ p {
     line-height: 1.5;
 }
 
-section + section {
+section {
     margin-top: 2rem;
 }
 
-li + li {
+li  {
     margin-top: 0.5rem;
 }
 
