--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,8 @@ h2 {
     border-top: 1px solid #888;
     border-bottom: 1px solid #888;
     padding: 0.75rem 0;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
+    margin-top: 2;
     background-color: #FCFCFE;
 }
 
@@ -66,9 +67,11 @@ ul {
 
 .resume img {
 
-     border-radius: 9999px;
-     width: 15rem;
-     height: 15rem;
+     border-radius: 1000px;
+     display: block;
+     margin-left: auto;
+     margin-right: auto;
+     width: 50%;
 }
 
 .resume p {
@@ -124,6 +127,34 @@ ul {
     margin: auto;
     grid-gap: 4rem;
 }
+
+.resume-page {
+	display: -ms-flex;
+	display: -webkit-flex;
+	display: flex;
+}
+
+.resume-page > .column_right {
+	margin-right: 10px;
+}
+
+.column_right {
+    background-color: white;
+    float: right;
+    width: 60%;
+    
+}
+
+.column_left {
+    background-color: #FCFCFE;
+    float: left;
+    width: 40%;
+    
+}
+.clear {
+
+        clear: both;
+    }
 
 
 .myForm {
@@ -202,3 +233,21 @@ ul {
           }
         }
       
+        @media screen and (max-width : 767px) {
+       
+            .column_left, .column_right {
+       
+                width: 100%;
+                float: none;
+                background-color: white;
+                margin-right: 20px;
+        
+            }
+
+
+            .resume-page {
+              
+                display: block;
+            }
+        }
+        
